crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer ffi_spoke_connect_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_spoke_connect_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_spoke_connect_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_spoke_connect_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_spoke_connect_checksum_func_check_response_correlation(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_derive_peer_id_from_ed25519_pubkey(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_dispatch_allowed(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_is_allowlisted(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_protocol_version(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_required_capability(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_sign_hello_ed25519(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_verify_hello_ed25519(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_connect_responder_ffi(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_loopback_transport_pair(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_new_multi_peer_router_ffi(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_connect_remote_adapter_ffi(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_inboundsequence_advance(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_noncestore_check_and_record(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_outboundsequence_allocate(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_close(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_invoke_tool(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_register_tool_handler(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_remote_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_remote_peer_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_session_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_state(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransport_close(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransport_recv(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransport_send(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransportpair_client(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransportpair_server(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_host_capability_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_invoke_tool(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_knowledge_entries(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peer_host_capability_manifests(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peers(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_rules(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_timeline_events(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_findings(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_register_peer(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_multipeerrouterffi_unregister_peer(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_close(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_get_host_capability_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_get_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_get_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_invoke_tool(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_knowledge_entries(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_peer_host_capability_manifests(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_rules(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_list_timeline_events(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_findings(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_knowledge_entry(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_remoteadapterffi_put_relation(void
    
);
uint16_t uniffi_spoke_connect_checksum_constructor_inboundsequence_new(void
    
);
uint16_t uniffi_spoke_connect_checksum_constructor_noncestore_new(void
    
);
uint16_t uniffi_spoke_connect_checksum_constructor_outboundsequence_new(void
    
);
uint32_t ffi_spoke_connect_uniffi_contract_version(void
    
);