crates/spoke-connect/bindings/python/spoke_connect/__init__.py


_UniffiLib = _uniffi_load_indirect()
_UniffiLib.ffi_spoke_connect_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_spoke_connect_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_spoke_connect_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_spoke_connect_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_spoke_connect_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_spoke_connect_rustbuffer_free.restype = None
_UniffiLib.ffi_spoke_connect_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_spoke_connect_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_spoke_connect_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_spoke_connect_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_spoke_connect_checksum_func_check_response_correlation.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_check_response_correlation.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_connect_remote_adapter_ffi.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_connect_remote_adapter_ffi.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_connect_responder_ffi.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_connect_responder_ffi.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_derive_peer_id_from_ed25519_pubkey.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_derive_peer_id_from_ed25519_pubkey.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_dispatch_allowed.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_dispatch_allowed.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_is_allowlisted.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_is_allowlisted.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_loopback_transport_pair.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_loopback_transport_pair.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_new_multi_peer_router_ffi.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_new_multi_peer_router_ffi.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_protocol_version.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_protocol_version.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_required_capability.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_required_capability.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_sign_hello_ed25519.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_sign_hello_ed25519.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_func_verify_hello_ed25519.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_func_verify_hello_ed25519.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_close.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_close.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_invoke_tool.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_invoke_tool.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_register_tool_handler.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_register_tool_handler.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_remote_manifest.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_remote_manifest.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_remote_peer_id.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_remote_peer_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_session_id.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_session_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_state.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_connectresponderffi_state.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_inboundsequence_advance.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_inboundsequence_advance.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_constructor_inboundsequence_new.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_constructor_inboundsequence_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransport_close.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransport_close.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransport_recv.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransport_recv.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransport_send.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransport_send.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransportpair_client.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransportpair_client.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransportpair_server.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_loopbacktransportpair_server.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_host_capability_manifest.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_host_capability_manifest.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_knowledge_entry.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_knowledge_entry.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_relation.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_get_relation.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_invoke_tool.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_invoke_tool.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_knowledge_entries.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_knowledge_entries.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peer_host_capability_manifests.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peer_host_capability_manifests.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peers.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_peers.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_rules.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_rules.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_timeline_events.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_list_timeline_events.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_findings.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_findings.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_knowledge_entry.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_knowledge_entry.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_relation.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_put_relation.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_register_peer.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_register_peer.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_unregister_peer.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_multipeerrouterffi_unregister_peer.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_noncestore_check_and_record.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_noncestore_check_and_record.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_constructor_noncestore_new.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_constructor_noncestore_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_outboundsequence_allocate.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_outboundsequence_allocate.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_constructor_outboundsequence_new.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_constructor_outboundsequence_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_close.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_close.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_get_host_capability_manifest.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_get_host_capability_manifest.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_get_knowledge_entry.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_get_knowledge_entry.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_get_relation.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_get_relation.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_invoke_tool.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_invoke_tool.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_knowledge_entries.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_knowledge_entries.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_peer_host_capability_manifests.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_peer_host_capability_manifests.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_rules.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_rules.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_timeline_events.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_list_timeline_events.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_put_findings.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_put_findings.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_put_knowledge_entry.argtypes = (
)
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_put_knowledge_entry.restype = ctypes.c_uint16
_UniffiLib.uniffi_spoke_connect_checksum_method_remoteadapterffi_put_relation.argtypes = (
)
